updating controller for user management